--- a/adote/package.json
+++ b/adote/package.json
@@ -7,11 +7,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "rxjs": "^7.3.0",
     "styled-components": "^5.3.0",
     "typeface-poppins": "^1.1.13",
     "web-vitals": "^1.1.2",
