--- a/adote/package.json
+++ b/adote/package.json
@@ -12,9 +12,12 @@
     "formik": "^2.2.9",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-collapse": "^5.1.0",
+    "react-collapsible": "^2.8.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "rxjs": "^7.3.0",
